--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   ],
   "scripts": {
     "prepare": "husky install",
-    "test": "npm run build && cross-env NODE_ENV=test jest && npm run lint",
-    "start": "babel-node -- src/cli/bin db.json -r routes.json",
+    "test": "npm run build && npm run lint && cross-env NODE_ENV=test jest --watch",
+    "start": "babel-node -- src/cli/bin db.json -r routes.json --port 3004",
     "lint": "eslint . --ignore-path .gitignore",
     "fix": "npm run lint -- --fix",
     "build": "babel src -d lib",
